--- a/index.html
+++ b/index.html
@@ -127,6 +127,10 @@
                 color: #000000;
             }
 
+            #educational{
+                color: #000000;
+            }
+
         </style>
 
     </head>
@@ -203,23 +207,23 @@
                     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
                         <div class="info-card" onclick="navigateTo('page-history')">
                             <i data-lucide="scroll-text" class="lucide mb-4 w-8 h-8"></i>
-                            <h3 class="text-xl font-semibold mb-2">Historic Context</h3>
-                            <p class="text-gray-400">Discover the timeless tradition and mathematical genius behind these ephemeral artworks. Click to learn more.</p>
+                            <h3 class="text-xl font-semibold mb-2" style="color: #000000;">Historic Context</h3>
+                            <p class="text-gray-400" style="color: #000000;">Discover the timeless tradition and mathematical genius behind these ephemeral artworks. Click to learn more.</p>
                         </div>
                         <div class="info-card" onclick="navigateTo('page-math')">
                             <i data-lucide="atom" class="lucide mb-4 w-8 h-8"></i>
-                            <h3 class="text-xl font-semibold mb-2">Science & Math</h3>
-                            <p class="text-gray-400">Explore how we translate sacred geometry into generative AI, creating infinite variations. Click to learn more.</p>
+                            <h3 class="text-xl font-semibold mb-2" style="color: #000000;">Science & Math</h3>
+                            <p class="text-gray-400" style="color: #000000;">Explore how we translate sacred geometry into generative AI, creating infinite variations. Click to learn more.</p>
                         </div>
                         <div class="info-card" onclick="navigateTo('page-tutorial')">
                             <i data-lucide="edit-3" class="lucide mb-4 w-8 h-8"></i>
-                            <h3 class="text-xl font-semibold mb-2">Learn Kolam</h3>
-                            <p class="text-gray-400">An interactive step-by-step tutorial to start your journey as a Kolam artist. Click to begin.</p>
+                            <h3 class="text-xl font-semibold mb-2" style="color: #000000;">Learn Kolam</h3>
+                            <p class="text-gray-400" style="color: #000000;">An interactive step-by-step tutorial to start your journey as a Kolam artist. Click to begin.</p>
                         </div>
                         <div class="info-card opacity-50 cursor-not-allowed">
                             <i data-lucide="gamepad-2" class="lucide mb-4 w-8 h-8"></i>
-                            <h3 class="text-xl font-semibold mb-2">Gamified Learning</h3>
-                            <p class="text-gray-400">Challenge your spatial reasoning by solving intricate Kolam puzzles. (Coming Soon)</p>
+                            <h3 class="text-xl font-semibold mb-2" style="color: #000000;">Gamified Learning</h3>
+                            <p class="text-gray-400" style="color: #000000;">Challenge your spatial reasoning by solving intricate Kolam puzzles. (Coming Soon)</p>
                         </div>
                     </div>
                 </div>
